# Toda-App

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml
.specify/memory/: constitution.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt  todoapp.db
backend/.specify/memory/: constitution.md
backend/alembic/: env.py
backend/alembic/versions/: f946b474cbfe_initial_schema_users_and_todos.py
backend/history/adr/: 001-better-auth-jwt-architecture.md
backend/specs/002-web-app/: README.md  plan.md  spec.md  tasks.md
backend/src/: database.py
backend/src/api/: dependencies.py  exceptions.py  main.py  schemas.py
backend/src/api/routes/: auth.py  tasks.py  todos.py
backend/src/auth/: jwt.py  password.py  service.py
backend/src/models/: __init__.py  todo.py  user.py
backend/src/skills/: todo_manager.py
backend/src/skills/auth/: __init__.py  base_auth_skill.py  get_current_user_skill.py  login_user_skill.py  register_user_skill.py  verify_session_skill.py
backend/src/storage/: database_store.py  todo_store.py
backend/tests/: test_api_auth.py  test_api_todos.py  test_auth_jwt.py  test_auth_password.py  test_auth_service.py
chatbot/: .env.example  .gitignore  README.md  package.json  tsconfig.json
chatbot/agent/api/: README.md  chat-endpoint.ts  server.ts
chatbot/agent/config/: README.md  index.ts  (+4 more)
chatbot/chatkit/: README.md  index.html  package.json  vite.config.ts
chatbot/mcp-server/: index.ts  server.ts  test-server.ts  verify-skills.ts
frontend/: .env.local.example  middleware.ts  next.config.mjs  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/components/: ChatButton.tsx  Navigation.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
frontend/lib/: api.ts  auth-api.ts  auth-client.ts  auth-context.tsx  auth-token.ts  auth.ts  todos-api.ts  use-backend-auth.ts
frontend/scripts/: init-better-auth-db.ts  verify-better-auth-db.ts
history/adr/: 001-better-auth-jwt-architecture.md
specs/001-in-memory-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-app/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-chatbot/: plan.md  spec.md  tasks.md
src/cli/: commands.py  display.py  main.py
src/models/: todo.py
src/skills/: todo_manager.py  validator.py
src/storage/: memory_store.py
(+44 files in other folders)
